convert all routers to TS
